--- a/landingpage/style.css
+++ b/landingpage/style.css
@@ -13,6 +13,7 @@
 .hideScrollBar::-webkit-scrollbar {
   display: none;
 }
+
 #navbar {
   position: sticky;
   top: 0px;
@@ -23,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  z-index: 30;
 }
 #companyname {
   text-align: center;
@@ -50,32 +51,34 @@
   transform: scale(1.1);
 }
 #nav-right-side {
-  list-style-type: none;
+  position: fixed;
+  right: 2vw;
+  top: 1vw;
   display: flex;
-  justify-content: space-around;
-  width: 50%;
-  align-items: center;
-}
-.inputBlock {
-  display: flex;
-  align-items: center;
-}
-.inputTag {
-  height: 4vh;
-  outline: none;
-  padding: 0 5px;
-  border: none;
-  width: 10vw;
+  justify-content:center;
+  flex-direction: column;
+  text-align: center;
+  width: 8vw;
 }
 .icon {
-  position: absolute;
-  margin-left: -4vh;
-  height: 4vh;
-  width: 4vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #adefd1ff;
+  font-size: xx-large;
+  color: black;
+}
+.icon:hover{
+  color:#adefd1ff;
+}
+.list-of-opt{
+color: aqua;
+/* z-index: 30; */
+}
+.drop-down-list{
+  display: none;
+  flex-direction: column;
+  /* z-index:444 ; */
+  margin-top: 20px;
+}
+#logout-btn{
+margin-top: 1vh;
 }
 .button {
   box-sizing: content-box;
@@ -181,14 +184,12 @@
   font-size: larger;
   padding: 0 2vw;
   transition: transform 0.1s;
-  z-index: 1;
   color: #00203fff;
 }
 .categories-button:hover {
   transform: scale(1.2);
   color: green;
   cursor: pointer;
-  z-index: 1;
 }
 .catedories-section {
   display: none;
@@ -225,7 +226,7 @@
 }
 .imageOfFoods:hover {
   transform: scale(1.5);
-  z-index: -1;
+  z-index: -100;
 }
 #companyname:hover,
 #login:hover,
@@ -259,7 +260,7 @@ font-size: 1.2rem;
   display: none;
 }
 .for-hide-show {
-  position: sticky;
+  position: fixed;
   bottom: 10px;
   left: 10px;
   background-color: #c5c5c5;
