--- a/landingpage/style.css
+++ b/landingpage/style.css
@@ -51,7 +51,7 @@
   transform: scale(1.1);
 }
 #nav-right-side {
-  position: fixed;
+  position: sticky;
   right: 2vw;
   top: 1vw;
   display: flex;
@@ -153,7 +153,7 @@ div.for-search-panel {
   border-radius: 5px;
   width: 25vw;
   height: auto;
-  max-height:60vh ;
+  max-height: 60vh;
   position: fixed;
   bottom: 0px;
   right: 0px;
@@ -163,20 +163,19 @@ div.for-search-panel {
   overflow-x: hidden;
   /* display: none; */
 }
-h3.heding-of-searched-results{
+h3.heding-of-searched-results {
   background-color: #00203fff;
   color: #adefd1ff;
   text-align: center;
   border-radius: 20px;
 }
 /* div.for-search-panel::-webkit-scrollbar{*/
-  /* display: none; */
-  /* scrollbar-width: auto; */
-  /* width: 8px; */
-  /* border: none; */
-  /* background-color: transparent; */
+/* display: none; */
+/* scrollbar-width: auto; */
+/* width: 8px; */
+/* border: none; */
+/* background-color: transparent; */
 /* }  */
-
 
 #slider {
   overflow: hidden;
@@ -352,19 +351,7 @@ div.for-grid-50-50 {
 width: 10vw;
 } */
 /* for footer */
-.formarginTB {
-  margin: 20px 0 0 0;
-  font-size: 1.2rem;
-  padding: 10px;
-}
-.footerContactUsAndConnect {
-  height: 37vh;
-  padding-bottom: 10px;
-  background-image: none;
-}
-#connectWithUs {
-  border-right: 2px solid #adefd1ff;
-}
+
 /* last for register */
 /* :root {
   --code-color: darkred;
@@ -374,10 +361,6 @@ width: 10vw;
   --scroll-bar-color: #c5c5c5;
   --scroll-bar-bg-color: #f6f6f6;
 } */
-
-.content-except-register-form {
-  overflow-x: hidden;
-}
 
 #registration-components {
   position: fixed;
@@ -480,21 +463,85 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.for-border{
-border-top: 3px solid black;
-margin-top: 5px;
+.for-border {
+  border-top: 3px solid black;
+  margin-top: 5px;
 }
 /* for about us section */
-.large-font-size{
-  font-size: 3rem;
+.large-font-size {
+  font-size: 2rem;
 }
-.for-about-us-section{
-  background-image: url(./../images/foodImages/forAboutUs.jpg);
-  /* background-size: 100; */
+.for-about-us-section {
+  margin: 0 5vw;
+  background-image: url(./../images/foodImages/foodForAboutUs2.jpg);
   height: 50vh;
-  color: #adefd1ff;
+  color: white;
   font-weight: bolder;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 3px solid #00203fff;
+}
+.aboutUsStyle {
+  position: relative;
+  top: 20px;
+  background-color: #00203fff;
+  color: #adefd1ff;
+  width: fit-content;
+  text-align: center;
+  padding: 4px 5px;
+  margin: auto;
+}
+.for-about-us-text {
+  text-align: center;
+  text-shadow: 2px 2px black;
+}
+.for-footer {
+  background-color: #00203fff;
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr; */
+  margin: 5vw;
+}
+.for-margin{
+  padding: 8vh 0 0 0;
+  /* display: inline; */
+}
+.for-margin:last-child{
+  padding: 8vh 0 10vh 0;
+}
+/* p:last-child {
+  background: #ff0000;
+} */
+.center-row-wise {
+  /* display: flex;
+  justify-content: center; */
+  text-align: center;
+}
+h1.center-row-wise {
+  /* background-color: #adefd1ff; */
+  /* color: #00203fff; */
+  width: fit-content;
+  margin: auto;
+
+  margin-bottom: 4vh;
+  /* padding: 2vw; */
+
+
+}
+.forSocialIcons {
+  background-color: #adefd1ff;
+  color: #00203fff;
+  margin: 5px;
+  padding: 1vw;
+  font-size: 1.7rem;
+  border-radius: 50%;
+}
+.for-whatsapp {
+  background-color: green;
+}
+.for-viber {
+  background-color: purple;
+}
+.for-gmail {
+  background-image: linear-gradient(to right, white, red);
 }
